typeway/tests/compile_fail/mount_builder_missing_effect.stderr
warning: unused import: `typeway_core::effects::*`
 --> tests/compile_fail/mount_builder_missing_effect.rs:4:5
  |
4 | use typeway_core::effects::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: effect `typeway::CorsRequired` has not been provided
  --> tests/compile_fail/mount_builder_missing_effect.rs:22:10
   |
22 |         .build();
   |          ^^^^^ this effect list does not contain `typeway::CorsRequired`
   |
   = help: the trait `HasEffect<typeway::CorsRequired, _>` is not implemented for `ENil`
   = note: call `.provide::<typeway::CorsRequired>()` on the EffectfulServer to discharge this requirement
help: the following other types implement trait `HasEffect<E, Idx>`
  --> $WORKSPACE/typeway-core/src/effects.rs
   |
   |   impl<E: Effect, Tail> HasEffect<E, EHere> for ECons<E, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ECons<E, Tail>` implements `HasEffect<E, EHere>`
...
   | / impl<E: Effect, Head: Effect, Tail, Idx> HasEffect<E, EThere<Idx>> for ECons<Head, Tail> where
   | |     Tail: HasEffect<E, Idx>
   | |___________________________^ `ECons<Head, Tail>` implements `HasEffect<E, EThere<Idx>>`
   = note: required for `ECons<typeway::AuthRequired, ENil>` to implement `HasEffect<typeway::CorsRequired, EThere<_>>`
   = note: required for `typeway::Requires<typeway::CorsRequired, Endpoint<Get, HCons<Lit<__lit_items>, HNil>, NoBody, std::string::String>>` to implement `AllProvided<ECons<typeway::AuthRequired, ENil>, (EThere<_>, ())>`
   = note: 2 redundant requirements hidden
   = note: required for `((typeway::Requires<typeway::AuthRequired, Endpoint<Get, HCons<Lit<__lit_users>, HNil>, NoBody, std::string::String>>,), (typeway::Requires<typeway::CorsRequired, Endpoint<Get, HCons<Lit<__lit_items>, HNil>, NoBody, std::string::String>>,))` to implement `AllProvided<ECons<typeway::AuthRequired, ENil>, (((EHere, ()),), ((EThere<_>, ()),))>`
note: required by a bound in `ServerBuilder::<A, M, P>::build`
  --> $WORKSPACE/typeway-server/src/mount.rs
   |
   |     pub fn build<MIdx, PIdx>(self) -> crate::server::Server<A>
   |            ----- required by a bound in this associated function
...
   |         A: AllProvided<P, PIdx>,
   |            ^^^^^^^^^^^^^^^^^^^^ required by this bound in `ServerBuilder::<A, M, P>::build`
